--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 body {
-  background-image: linear-gradient(45deg, #ee9ca7 0%, #ffdde1 100%);
+  background-image: url('/background.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 button {
