--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,5 @@
 @tailwind utilities;
 
 body {
-  background-image: url('/background.jpg');
-  background-size: cover;
-  background-position: center;
+  background-color: black;
 }
