--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,21 @@
 body {
   background-color: black;
 }
+
+@font-face {
+  font-family: 'dialogue-font';
+  src: url('/fonts/dialogue-font.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'system-font';
+  src: url('/fonts/system-font.otf') format('opentype');
+}
+
+.system-font {
+  font-family: 'system-font';
+}
+
+.dialogue-font {
+  font-family: 'dialogueText';
+}
